# enva

./: .env  Cargo.toml  LICENSE  README.md  dist-workspace.toml  docker-compose.yml  nixpacks.toml
.github/workflows/: build-setup.yml  release.yml
.nixpacks/: Dockerfile  build.sh  nixpkgs-ef56e777fedaa4da8c66a150081523c5de1e0171.nix
crates/client/: Cargo.toml
crates/client/src/: encryption.rs  endpoints.rs  handlers.rs  main.rs  utils.rs
crates/server/: Cargo.toml
crates/server/src/: db.rs  handlers.rs  main.rs  models.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  models.rs
src/: handlers.rs  main.rs
