[workspace]
resolver = "2"
members = [
    "crates/server",
    "crates/client",
    "crates/shared"
]

[workspace.package]
version = "1.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/photon-hq/enva"

[workspace.dependencies]
# Shared internal crate
enva-shared = { version = "1.1.1", path = "crates/shared" }

# Common dependencies
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.29"
env_logger = "0.11.8"
directories = "6.0.0"
toml_edit = { version = "0.24.0", features = ["serde"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
