[package]
name = "client"
version = "1.0.9"
edition = "2024"
license = "MIT"
repository = "https://github.com/photon-hq/enva"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
directories = "6.0.0"
env_logger = "0.11.8"
git2 = "0.20.3"
log = "0.4.29"
toml_edit = "0.24.0"
shared = { version = "^0.1.1", path = "../shared" }
tokio = { version = "1.48.0", features = ["full"] }
which = "8.0.0"
reqwest = { version = "0.12.26", features = ["json"] }
dotenvy_macro = "0.15.7"
serde = "1.0.228"
pbkdf2 = "0.12.2"
sha2 = "0.10.9"
zeroize = "1.8.2"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native", "crypto-rust"] }
base64 = "0.22.1"
aes-gcm = "0.10.3"
