[package]
name = "enva"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI client for enva - environment variable management"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
directories.workspace = true
env_logger.workspace = true
git2 = "0.20.3"
log.workspace = true
toml_edit.workspace = true
enva-shared.workspace = true
tokio.workspace = true
which = "8.0.0"
reqwest = { version = "0.12.26", features = ["json"] }
serde.workspace = true
pbkdf2 = "0.12.2"
sha2 = "0.10.9"
zeroize = "1.8.2"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native", "crypto-rust"] }
base64 = "0.22.1"
aes-gcm = "0.10.3"
