[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
shared = { path = "../shared" }
uuid = { version = "1.19.0", features = ["v4"] }
directories = "6.0.0"
log = "0.4.29"
toml_edit = { version = "0.24.0", features = ["serde"] }
toml = "0.9.10"
env_logger = "0.11.8"