[package]
name = "enva-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Server for enva - environment variable management"

[dependencies]
axum = "0.8.8"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
enva-shared.workspace = true
uuid = { version = "1.19.0", features = ["v4"] }
directories.workspace = true
log.workspace = true
toml_edit.workspace = true
toml = "0.9.10"
env_logger.workspace = true