[package]
name = "enva-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types and utilities for enva"

[dependencies]
octocrab = "0.49.2"
url = "2.5.7"
log.workspace = true
serde.workspace = true
directories.workspace = true
